--- a/story-book/views/layouts/main.handlebars
+++ b/story-book/views/layouts/main.handlebars
@@ -28,9 +28,15 @@
         integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous">
         </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <script src="https://cdn.ckeditor.com/4.11.4/standard/ckeditor.js"></script>
     <script>
         $(document).ready(() => {
             $('.button-collapse').sideNav();
+            $('select').material_select();
+        });
+
+        CKEDITOR.replace('body', {
+            plugins: 'wysiwygarea,toolbar,basicstyles,link'
         });
     </script>
 </body>
