67. Pre Production Key Variables

--- a/story-book/views/stories/index.handlebars
+++ b/story-book/views/stories/index.handlebars
@@ -14,7 +14,7 @@
                     <br>
                     <div class="chip">
                         <img src="{{user.image}}">
-                        {{user.firstname}} {{user.lastname}}
+                       <a href="/stories/user/{{user.id}}">{{user.firstname}} {{user.lastname}}</a> 
                     </div>
                     <div class="card-action center-align">
                         <a class="btn grey" href="/stories/show/{{id}}">Read More</a>
