--- a/story-book/views/stories/show.handlebars
+++ b/story-book/views/stories/show.handlebars
@@ -34,7 +34,7 @@
                         <h5>{{commentBody}}</h5>
                         <div class="chip">
                             <img src="{{commentUser.image}}">
-                            {{commentUser.firstname}} {{commentUser.lastname}}
+                            <a href="/stories/user/{{commentUser.id}}">{{commentUser.firstname}} {{commentUser.lastname}}</a>  
                         </div>
                         <br>
                         <small>Posted: {{formatDate commentDate 'MMMM Do YYYY'}}</small>
